--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "handlebars": "^4.7.8",
     "hbs": "^4.2.0",
     "mongoose": "^7.5.4",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2",
     "sweetalert2": "^11.7.31"
   },
-  "type":"module",
+  "type": "module",
   "name": "desafio-integrador",
   "version": "1.0.0",
   "main": "index.js",
